--- a/covid/contact.html
+++ b/covid/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CityRaze</title>
+    <meta property="og:image" content="assets/img/og-meta.jpg" />
+    <link rel="shortcut icon" href="assets/icon/fav.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/contact.css">
 </head>
 <body>
@@ -28,7 +30,7 @@
                             <li class="list__item active"><a href="#" class="list__link">CONTACT</a></li>
                         </ul>
                     </nav>
-                    <button class="button-sing-in"><img src="assets/icon/user.svg" alt="SingIn"/></button>
+                    <button class="button-sing-in" onclick="document.location='login.html'"><img src="assets/icon/user.svg" alt="SingIn"/></button>
                 </div>
             </div>
             
@@ -132,21 +134,21 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="footer__menu">
-                <a href="#preview" > <img class="logo" src="assets/icon/gray_logo.svg" alt="CityRize"></a>
+                <a href="index.html" > <img class="logo" src="assets/icon/gray_logo.svg" alt="CityRize"></a>
                 <div class="resources block-menu">
                     <h5 class="title__resources">Resources</h5>
                     <a href="#">documents</a>
-                    <a href="#">Shortsale</a>
-                    <a href="#">Probate</a>
-                    <a href="#">COVID-19 RELIEF</a>
+                    <a href="shortSale.html">Shortsale</a>
+                    <a href="probate.html">Probate</a>
+                    <a href="index.html">COVID-19 RELIEF</a>
                 </div>
 
                 <div class="legal block-menu">
                     <h5 class="title__legal">Legal</h5>
                     <a href="#">Blog</a>
-                    <a href="#">About Us</a>
+                    <a href="about.html">About Us</a>
                     <a href="#">FAQ</a>
-                    <a href="#">Contact Us</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
                 <form>
                     <input class="input__join" type="text" placeholder="subscribe to our mailing list" name="" id="">
