--- a/covid/probate.html
+++ b/covid/probate.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foreclosure</title>
+    <meta property="og:image" content="assets/img/og-meta.jpg" />
+    <link rel="shortcut icon" href="assets/icon/fav.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style/probate.css">
 </head>
@@ -23,13 +25,13 @@
                             <li class="list__item"><a href="index.html" class="list__link">COVID-19 RELIEF</a></li>
                             <li class="list__item"><a href="foreclosure.html" class="list__link">FORECLOSURE</a></li>
                             <li class="list__item"><a href="shortSale.html" class="list__link">SHORT SALE</a></li>
-                            <li class="list__item active"><a href="#" class="list__link">PROBATE</a></li>
+                            <li class="list__item active"><a href="probate.html" class="list__link">PROBATE</a></li>
                             <li class="list__item"><a href="about.html" class="list__link">ABOUT US</a></li>
                             <li class="list__item"><a href="#" class="list__link">LISTINGS</a></li>
-                            <li class="list__item"><a href="#" class="list__link">CONTACT</a></li>
+                            <li class="list__item"><a href="contact.html" class="list__link">CONTACT</a></li>
                         </ul>
                     </nav>
-                    <button class="button-sing-in"><img src="assets/icon/user.svg" alt="SingIn"/></button>
+                    <button class="button-sing-in" onclick="document.location='login.html'"><img src="assets/icon/user.svg" alt="SingIn"/></button>
                 </div>
                 
             </div>
@@ -138,17 +140,17 @@
                 <div class="resources block-menu">
                     <h5 class="title__resources">Resources</h5>
                     <a href="#">documents</a>
-                    <a href="#">Shortsale</a>
-                    <a href="#">Probate</a>
-                    <a href="#">COVID-19 RELIEF</a>
+                    <a href="shortSale.html">Shortsale</a>
+                    <a href="probate.html">Probate</a>
+                    <a href="index.html">COVID-19 RELIEF</a>
                 </div>
 
                 <div class="legal block-menu">
                     <h5 class="title__legal">Legal</h5>
                     <a href="#">Blog</a>
-                    <a href="#">About Us</a>
+                    <a href="about.html">About Us</a>
                     <a href="#">FAQ</a>
-                    <a href="#">Contact Us</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
                 <form>
                     <input class="input__join" type="text" placeholder="subscribe to our mailing list" name="" id="">
