refactor: formating list

--- a/covid/about.html
+++ b/covid/about.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CityRaze</title>
     <meta property="og:image" content="assets/img/og-meta.jpg" />
+    <meta property="og:image:secure_url" content="https://test.cityrize.com/" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="400" />   
     <link rel="shortcut icon" href="assets/icon/fav.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/about.css">
 </head>
@@ -98,15 +102,19 @@
                         <input class="form-consultation__input" placeholder="full name" type="text" name="" id="">
                         <input class="form-consultation__input" placeholder="mobile" type="tel">
                         <input class="form-consultation__input" placeholder="email" type="email" name="" id="">
-                        <select class="form__list">
-                            <option selected>I’m Most interested in...</option>
-                            <option>COVID-19 RELIEF</option>
-                            <option>Foreclosure</option>
-                            <option>Short Sales</option>
-                            <option>Probate</option>
-                            <option>Bankruptcy</option>
-                            <option>Loan Modification</option>
-                        </select>
+                        
+                        <div class="form-list-arrow">
+                            <select class="form__list">
+                                <option selected>I’m Most interested in...</option>
+                                <option>COVID-19 RELIEF</option>
+                                <option>Foreclosure</option>
+                                <option>Short Sales</option>
+                                <option>Probate</option>
+                                <option>Bankruptcy</option>
+                                <option>Loan Modification</option>
+                            </select>
+                        </div>
+                        
                         <button class="form-consultation__button" type="button">Submit Form</button>
                     </form>
                 </div>
