--- a/covid/contact.html
+++ b/covid/contact.html
@@ -57,15 +57,18 @@
                         <input class="form-consultation__input" placeholder="full name" type="text" name="" id="">
                         <input class="form-consultation__input" placeholder="mobile" type="tel">
                         <input class="form-consultation__input" placeholder="email" type="email" name="" id="">
-                        <select class="form__list">
-                            <option selected>I’m Most interested in...</option>
-                            <option>COVID-19 RELIEF</option>
-                            <option>Foreclosure</option>
-                            <option>Short Sales</option>
-                            <option>Probate</option>
-                            <option>Bankruptcy</option>
-                            <option>Loan Modification</option>
-                        </select>
+                        <div class="form-list-arrow">
+                            <select class="form__list">
+                                <option selected>I’m Most interested in...</option>
+                                <option>COVID-19 RELIEF</option>
+                                <option>Foreclosure</option>
+                                <option>Short Sales</option>
+                                <option>Probate</option>
+                                <option>Bankruptcy</option>
+                                <option>Loan Modification</option>
+                            </select>
+                        </div>
+                        
                         <button class="form-consultation__button" type="button">Submit Form</button>
                     </form>
                 </div>
@@ -110,14 +113,18 @@
             <div class="wrapper">
                 <div class="map__content">
                     <form class="map__form">
-                        <select class="form__list">
-                            <option selected>IM INTERESTED IN MORE INFORMATION REGARDING:</option>
-                            <option>foreclosure</option>
-                            <option>short sale</option>
-                            <option>probate</option>
-                            <option>bankruptcy</option>
-                            <option>Loan Modification</option>
-                        </select>
+
+                        <div class="form-list-arrow">
+                            <select class="form__list">
+                                <option selected>IM INTERESTED IN MORE INFORMATION REGARDING:</option>
+                                <option>foreclosure</option>
+                                <option>short sale</option>
+                                <option>probate</option>
+                                <option>bankruptcy</option>
+                                <option>Loan Modification</option>
+                            </select>
+                        </div>
+                        
                         <input class="map__input" placeholder="name" type="text" name="" id="">
                         <input class="map__input" placeholder="phone number" type="tel">
                         <textarea class="message" placeholder="your message"></textarea>
