refactor: formating footer and header

--- a/covid/index.html
+++ b/covid/index.html
@@ -132,7 +132,8 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="footer__menu">
-                <a href="#preview" > <img class="logo" src="assets/icon/gray_logo.svg" alt="CityRize"></a>
+                <a href="#preview" class="block-logo"> <img class="logo" src="assets/icon/logo.svg" alt="CityRize">
+                <span>(c) Cityrize 2020</span></a>
                 <div class="resources block-menu">
                     <h5 class="title__resources">Resources</h5>
                     <a href="#">documents</a>
@@ -149,8 +150,12 @@
                     <a href="contact.html">Contact Us</a>
                 </div>
                 <form>
-                    <input class="input__join" type="text" placeholder="subscribe to our mailing list" name="" id="">
-                    <button class="register" type="button">+</button>
+                    <h5 class="join-title">Join our mailing list</h5>
+                    <div>
+                        <input class="input__join" type="text" placeholder="Your e-mail" name="" id="">
+                        <button class="register" type="button">join</button>
+                    </div>
+                   
                 </form>
                 <div class="social">
                     <a href="#"><img src="assets/icon/facebook.svg" alt="facebook"></a>
