--- a/covid/contact.html
+++ b/covid/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CityRaze</title>
     <meta property="og:image" content="assets/img/og-meta.jpg" />
+    <meta property="og:image:secure_url" content="https://test.cityrize.com/" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="400" />
     <link rel="shortcut icon" href="assets/icon/fav.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/contact.css">
 </head>
@@ -141,13 +145,14 @@
     <footer class="footer">
         <div class="wrapper">
             <div class="footer__menu">
-                <a href="index.html" > <img class="logo" src="assets/icon/gray_logo.svg" alt="CityRize"></a>
+                <a href="#preview" class="block-logo"> <img class="logo" src="assets/icon/logo.svg" alt="CityRize">
+                <span>(c) Cityrize 2020</span></a>
                 <div class="resources block-menu">
                     <h5 class="title__resources">Resources</h5>
                     <a href="#">documents</a>
                     <a href="shortSale.html">Shortsale</a>
                     <a href="probate.html">Probate</a>
-                    <a href="index.html">COVID-19 RELIEF</a>
+                    <a href="#preview">COVID-19 RELIEF</a>
                 </div>
 
                 <div class="legal block-menu">
@@ -158,8 +163,12 @@
                     <a href="contact.html">Contact Us</a>
                 </div>
                 <form>
-                    <input class="input__join" type="text" placeholder="subscribe to our mailing list" name="" id="">
-                    <button class="register" type="button">+</button>
+                    <h5 class="join-title">Join our mailing list</h5>
+                    <div>
+                        <input class="input__join" type="text" placeholder="Your e-mail" name="" id="">
+                        <button class="register" type="button">join</button>
+                    </div>
+                   
                 </form>
                 <div class="social">
                     <a href="#"><img src="assets/icon/facebook.svg" alt="facebook"></a>
