--- a/covid/register.html
+++ b/covid/register.html
@@ -43,7 +43,8 @@
     </header>
     <main class="main">
         <section class="register">
-            <h2 class="register__title">Create Account</h2>
+            <h2 class="register__title">Create an Account</h2>
+            <a class="login" href="register.html">or <span>Login</span></a>
             <form class="register__form" action="">
                 <p>First name</p>
                 <input type="text"/>
@@ -63,7 +64,7 @@
         <div class="wrapper">
             <div class="footer__menu">
                 <a href="#preview" class="block-logo"> <img class="logo" src="assets/icon/logo.svg" alt="CityRize">
-                <span>(c) Cityrize 2020</span></a>
+                <span>&copy;  Cityrize 2020</span></a>
                 <div class="resources block-menu">
                     <h5 class="title__resources">Resources</h5>
                     <a href="#">documents</a>
