--- a/covid/foreclosure.html
+++ b/covid/foreclosure.html
@@ -180,10 +180,10 @@
         <div class="wrapper">
             <div class="footer__menu">
                 <a href="#preview" class="block-logo"> <img class="logo" src="assets/icon/logo.svg" alt="CityRize">
-                <span>(c) Cityrize 2020</span></a>
+                <span>&copy;  Cityrize 2020</span></a>
                 <div class="resources block-menu">
                     <h5 class="title__resources">Resources</h5>
-                    <a href="#">documents</a>
+                    <a href="#">Documents</a>
                     <a href="shortSale.html">Shortsale</a>
                     <a href="probate.html">Probate</a>
                     <a href="#preview">COVID-19 RELIEF</a>
